# SixHumpCamelbackPSO

./: .gitignore  1_simple_pso_average.csv  1_simple_pso_best.csv  1_simple_pso_solution.csv  2_inertia_weight_pso_average.csv  2_inertia_weight_pso_best.csv  2_inertia_weight_pso_solution.csv  3_constrict_coefficient_pso_average.csv  3_constrict_coefficient_pso_best.csv  3_constrict_coefficient_pso_solution.csv  4_guaranteed_convergence_pso_average.csv  4_guaranteed_convergence_pso_best.csv  4_guaranteed_convergence_pso_solution.csv  Makefile  README.md  SixHumpCamelbackPSO.cabal  package.yaml
app/: Main.hs
src/: Lib.hs  Point.hs
