cabal-version: 1.12

name:           SixHumpCamelbackPSO
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/bkthomps/SixHumpCamelbackPSO#readme>
homepage:       https://github.com/bkthomps/SixHumpCamelbackPSO#readme
bug-reports:    https://github.com/bkthomps/SixHumpCamelbackPSO/issues
author:         Bailey Thompson
maintainer:     Bailey Thompson
copyright:      2020 Bailey Thompson
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/bkthomps/SixHumpCamelbackPSO

library
  exposed-modules:
      Lib
  other-modules:
      Paths_SixHumpCamelbackPSO
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable SixHumpCamelbackPSO-exe
  main-is: Main.hs
  other-modules:
      Paths_SixHumpCamelbackPSO
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      SixHumpCamelbackPSO
    , base >=4.7 && <5
  default-language: Haskell2010

test-suite SixHumpCamelbackPSO-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_SixHumpCamelbackPSO
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      SixHumpCamelbackPSO
    , base >=4.7 && <5
  default-language: Haskell2010
